--- a/FAQ.html
+++ b/FAQ.html
@@ -88,6 +88,9 @@
     <h3>What services do you offer as a Virtual Assistant?</h3>
     <p>I provide structured virtual assistance and data services, including inbox/calendar management, CRM updates, reporting, dashboards (Excel/Power BI), and branded slide design (PowerPoint/Canva).</p>
 
+    <h3>How do your pricing and collaboration work?</h3>
+    <p>Everything is based on the client’s specific needs. Once you complete the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a> form, I review your goals, workload, and priorities. Then, I build a custom monthly plan — including hours, deliverables, and price — that fits your workflow and budget. No generic packages. Every collaboration is unique and designed around you.</p>
+
     <h3>How do I know you're reliable and organized?</h3>
     <p>Each client has a structured plan with clear hours and deliverables. I track tasks with Google Calendar and Excel, and provide consistent updates to ensure transparency, timeliness, and alignment with your goals.</p>
 
@@ -97,25 +100,26 @@
     <h3>How do payments work?</h3>
     <p>I use <strong>Escrow.com</strong> to ensure mutual protection. Once we agree on the terms, you'll receive a private Escrow link to deposit payment. Funds are released only when you're satisfied with the results.</p>
 
+    <h3>What happens if I miss a payment?</h3>
+    <p>If payment is not made on time, a 10% late fee applies per day starting from the due date. If payment is not received by Day 3, work will be suspended and all deliverables withheld until full payment is completed, including penalties. On Day 1 of delay, you will receive a written reminder.</p>
+
+    <h3>What if I want to request a one-time project?</h3>
+    <p>Clients can request custom projects at any time as long as they fall within their selected plan. A 50% deposit is required in advance, and the remaining 50% is paid upon delivery. These requests must be submitted at least 48 hours before they’re needed.</p>
+
+    <h3>Do I need to renew my contract monthly?</h3>
+    <p>No. The contract remains valid as long as monthly payments are active. If either party needs to revise or update the agreement, it can be reviewed and adjusted accordingly at any time.</p>
+
+    <h3>How do you confirm the scope of my tasks?</h3>
+    <p>All task and project instructions must be submitted in writing (email, Slack, WhatsApp). I’ll respond with a scope recap. If I don’t receive clarification or corrections within 30 minutes, I’ll proceed as outlined in the recap. Confirmation replies are encouraged but not mandatory.</p>
+
     <h3>Will we sign a contract?</h3>
     <p>Yes. I provide a clear service agreement tailored to your project. It outlines the scope, deadlines, fees, and terms like emergency policies or revisions — so both sides stay aligned and confident throughout.</p>
-
-    <h3>How does collaboration work? What are your prices?</h3>
-    <p>
-      I work through <strong>custom monthly plans</strong> designed specifically for each client’s needs, goals, and budget. 
-      These plans ensure we’re aligned on hours, deliverables, and expectations from the start.
-      To get matched with the right plan, simply fill out the short questionnaire on my 
-      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" style="color: var(--color-accent); font-weight: bold; text-decoration: none;">
-        contact page
-      </a> 
-      and describe what you’re looking for. I’ll personally review your answers and propose the best fit.
-    </p>
 
     <h3>What if there's an emergency or unexpected situation?</h3>
     <p>If I face medical leave or a local emergency (weather, internet, etc.), you'll be notified with at least 48 hours' notice (or 12 for urgent issues), backed by official reports if needed. I plan ahead to avoid delays whenever possible.</p>
 
     <h3>How do we get started?</h3>
-    <p>Fill out my short onboarding form on the contact page. Once I review your needs, I'll suggest the best plan and send over your agreement + Escrow link. Work starts immediately after confirmation.</p>
+    <p>Fill out my short onboarding form on the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a>. Once I review your needs, I'll suggest the best plan and send over your agreement + Escrow link. Work starts immediately after confirmation.</p>
 
     <div class="home-button">
       <a href="https://irvyandl.github.io/VirtualAssistance/">← Back to Home</a>
