--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
   <meta name="description" content="Bilingual virtual assistant offering dashboards, business reports, and visual presentations for digital teams and e-commerce businesses.">
   <meta name="description" lang="es" content="Asistente virtual bilingüe que ofrece dashboards, reportes empresariales y presentaciones visuales para equipos digitales y negocios de e-commerce.">
   <title>Irvin Prado | Virtual Assistance + BI</title>
-  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
+
+  <!-- Structured Data: Organization Logo for Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Irvin Prado",
+    "url": "https://irvyandl.github.io/VirtualAssistance",
+    "logo": "https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico"
+  }
+  </script>
+
   <style>
     :root {
       --color-bg: #E8F0F5;
