--- a/FAQ.html
+++ b/FAQ.html
@@ -98,7 +98,7 @@
     <p>Yes. I use encrypted cloud services (Google Drive, OneDrive), and strong password policies. NDAs are welcome, and I treat sensitive business data with the confidentiality it deserves.</p>
 
     <h3>How do payments work?</h3>
-    <p>I use <strong>Escrow.com</strong> to ensure mutual protection. Once we agree on the terms, you'll receive a private Escrow link to deposit payment. Funds are released only when you're satisfied with the results.</p>
+    <p>I use <strong>HelloBonsai.com</strong> to ensure mutual protection. Once we agree on the terms, you'll receive a private Hellobonsai invoice link. Funds are released only when you're satisfied with the results.</p>
 
     <h3>What happens if I miss a payment?</h3>
     <p>If payment is not made on time, a 10% late fee applies per day starting from the due date. If payment is not received by Day 3, work will be suspended and all deliverables withheld until full payment is completed, including penalties. On Day 1 of delay, you will receive a written reminder.</p>
