--- a/FAQ.html
+++ b/FAQ.html
@@ -119,7 +119,7 @@
     <p>If I face medical leave or a local emergency (weather, internet, etc.), you'll be notified with at least 48 hours' notice (or 12 for urgent issues), backed by official reports if needed. I plan ahead to avoid delays whenever possible.</p>
 
     <h3>How do we get started?</h3>
-    <p>Fill out my short onboarding form on the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a>. Once I review your needs, I'll suggest the best plan and send over your agreement + Escrow link. Work starts immediately after confirmation.</p>
+    <p>Fill out my short onboarding form on the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a>. Once I review your needs, I'll suggest the best plan and send over your agreement + HelloBonsai link. Work starts immediately after confirmation.</p>
 
     <div class="home-button">
       <a href="https://irvyandl.github.io/VirtualAssistance/">← Back to Home</a>
