--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <meta name="description" content="Bilingual virtual assistant offering dashboards, business reports, and visual presentations for digital teams and e-commerce businesses.">
   <meta name="description" lang="es" content="Asistente virtual bilingüe que ofrece dashboards, reportes empresariales y presentaciones visuales para equipos digitales y negocios de e-commerce.">
   <title>Irvin Prado | Virtual Assistance + BI</title>
-
-  <!-- Favicon -->
   <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon">
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
-
-  <!-- Structured Data: Organization Logo for Google -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -23,7 +17,6 @@
     "logo": "https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico"
   }
   </script>
-
   <style>
     :root {
       --color-bg: #E8F0F5;
@@ -32,45 +25,38 @@
       --color-gray: #F6F8FB;
       --color-text-dark: #1A1A1A;
     }
-
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom right, #F6F8FB, #E8F0F5);
       color: var(--color-text-dark);
     }
-
     header {
       text-align: left;
       padding: 4rem 2rem 2rem 2rem;
       max-width: 900px;
       margin: auto;
     }
-
     h1 {
       font-family: 'Poppins', sans-serif;
       font-size: 2.5rem;
       color: var(--color-accent);
       margin-bottom: 1rem;
     }
-
     h2 {
       font-size: 1.2rem;
       font-weight: normal;
       margin-bottom: 2rem;
     }
-
     .buttons {
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
     }
-
     .buttons a {
       text-decoration: none;
       padding: 0.75rem 1.5rem;
@@ -80,22 +66,18 @@
       transition: background 0.3s, color 0.3s;
       border: 2px solid var(--color-accent);
     }
-
     .buttons a.primary {
       background-color: var(--color-accent);
       color: white;
     }
-
     .buttons a.secondary {
       background-color: transparent;
       color: var(--color-accent);
     }
-
     .buttons a:hover {
       background-color: #1d3b6c;
       color: white;
     }
-
     .device-row {
       display: flex;
       justify-content: center;
@@ -105,7 +87,6 @@
       flex-wrap: wrap;
       padding: 0 2rem;
     }
-
     .device-row img {
       width: 100%;
       max-width: 400px;
@@ -113,7 +94,6 @@
       border-radius: 16px;
       box-shadow: 0 4px 24px rgba(0, 0, 0, 0.1);
     }
-
     footer {
       background-color: transparent;
       color: #666;
@@ -121,16 +101,39 @@
       padding: 2rem;
       font-size: 0.875rem;
     }
-
-    @media (max-width: 600px) {
+    .footer-call {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+    .footer-call a {
+      color: #2F528F;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .footer-call a:hover {
+      text-decoration: underline;
+    }
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.8rem;
+        text-align: center;
+      }
+      h2 {
+        text-align: center;
+        font-size: 1rem;
+      }
       .buttons {
         flex-direction: column;
         align-items: stretch;
       }
-
       .buttons a {
         width: 100%;
         text-align: center;
+      }
+      .device-row {
+        flex-direction: column;
+        padding: 1rem;
+        gap: 1.5rem;
       }
     }
   </style>
@@ -146,15 +149,16 @@
       <a href="https://irvyandl.github.io/VirtualAssistance/FAQ.html" class="secondary">Frequently Asked Questions</a>
     </div>
   </header>
-
   <div class="device-row">
     <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Presentation Slide Preview">
     <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Power BI Dashboard Mockup">
     <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Business Email Screenshot">
   </div>
-
   <footer>
     © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
+    <div class="footer-call">
+      <a href="https://irvyandl.github.io/PageDesignWithIrvin/">Do you want a website like this? Click here</a>
+    </div>
   </footer>
 </body>
 </html>
