--- a/Experience.html
+++ b/Experience.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Experience | Irvin Prado</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -12,26 +13,22 @@
       --color-gray: #F6F8FB;
       --color-text-dark: #1A1A1A;
     }
-
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom right, #F6F8FB, #E8F0F5);
       color: var(--color-text-dark);
       line-height: 1.6;
     }
-
     .section {
       padding: 4rem 2rem;
       max-width: 1000px;
       margin: auto;
     }
-
     .experience-block {
       background: var(--color-light);
       padding: 2rem;
@@ -39,88 +36,63 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
       margin-bottom: 4rem;
     }
-
     .experience-block .text {
       margin-bottom: 2rem;
     }
-
     .experience-block h3 {
       font-family: 'Poppins', sans-serif;
       font-size: 1.5rem;
       color: var(--color-accent);
       margin-bottom: 1rem;
     }
-
     .experience-block p {
       margin-bottom: 1rem;
     }
-
     .experience-block ul {
       margin-left: 1.5rem;
       margin-bottom: 1rem;
     }
-
     .experience-block .icon-row {
       display: flex;
       gap: 1rem;
       margin-bottom: 1rem;
     }
-
     .experience-block .icon-row img {
       width: 32px;
       height: 32px;
     }
-
-    .experience-block a {
-      display: inline-block;
-      margin-top: 1rem;
-      background-color: var(--color-accent);
-      color: white;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      transition: background 0.3s;
-    }
-
-    .experience-block a:hover {
-      background-color: #1d3b6c;
-    }
-
     .mockup-row {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       gap: 1.5rem;
+      margin-bottom: 2rem;
     }
-
     .mockup-row img {
       flex: 1 1 calc(33.333% - 1rem);
       max-width: 100%;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
-
     @media (max-width: 768px) {
       .mockup-row {
         flex-direction: column;
         align-items: center;
       }
-
       .mockup-row img {
         flex: 1 1 100%;
         max-width: 100%;
       }
     }
-
     .buttons {
       text-align: center;
       margin-top: 2rem;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
       gap: 1rem;
       justify-content: center;
+      align-items: center;
     }
-
     .buttons a {
       text-decoration: none;
       padding: 0.75rem 1.5rem;
@@ -131,18 +103,28 @@
       border: 2px solid var(--color-accent);
       color: var(--color-accent);
     }
-
     .buttons a:hover {
       background-color: #1d3b6c;
       color: white;
     }
-
     footer {
       background-color: transparent;
       color: #666;
       text-align: center;
       padding: 2rem;
       font-size: 0.875rem;
+    }
+    .footer-call {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+    .footer-call a {
+      color: #2F528F;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .footer-call a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -163,7 +145,6 @@
           <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Calendar icon">
           <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist icon">
         </div>
-        <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Get this experience for your team now</a>
       </div>
       <div class="mockup-row">
         <img src="https://github.com/Irvyandl/VirtualAssistance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Process flow mockup">
@@ -172,13 +153,16 @@
       </div>
     </div>
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Get This Experience to your Team Now!</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Get this experience for your team now</a>
       <a href="https://irvyandl.github.io/VirtualAssistance/Skills.html">The Skills I Add</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/FAQ.html">Frequently Asked Questions</a>
     </div>
   </section>
-
   <footer>
     © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
+    <div class="footer-call">
+      <a href="https://irvyandl.github.io/PageDesignWithIrvin/">Do you want a website like this? Click here</a>
+    </div>
   </footer>
 </body>
 </html>
