--- a/Skills.html
+++ b/Skills.html
@@ -1,9 +1,10 @@
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills | Irvin Prado</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet" />
   <style>
     :root {
       --color-bg: #E8F0F5;
@@ -114,6 +115,18 @@
       padding: 2rem;
       font-size: 0.875rem;
     }
+    .footer-call {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+    .footer-call a {
+      color: #2F528F;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .footer-call a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -121,105 +134,105 @@
     <h2>Skills I Add To Your Team</h2>
     <div class="skills-grid">
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2cdea032e82d2ec7887179025aa5ec14b375ac62/assets/visuals/cpu%20(1).svg" alt="SQL">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2cdea032e82d2ec7887179025aa5ec14b375ac62/assets/visuals/cpu%20(1).svg" alt="SQL" />
         <div class="info">
           <h4>SQL</h4>
           <p>Comfortable navigating structured databases, filtering and querying to generate reports and insights.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/bar-chart.svg" alt="Power BI">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/bar-chart.svg" alt="Power BI" />
         <div class="info">
           <h4>Power BI</h4>
           <p>Interactive dashboards and visual storytelling using DAX and report design best practices.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/table.svg" alt="Excel">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/table.svg" alt="Excel" />
         <div class="info">
           <h4>Advanced Excel</h4>
           <p>Data modeling, formulas, Power Query and dashboards for fast and accurate decisions.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/773e28da9e818955450cdc4961986d4e1e90016f/assets/visuals/layers.svg" alt="Canva">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/773e28da9e818955450cdc4961986d4e1e90016f/assets/visuals/layers.svg" alt="Canva" />
         <div class="info">
           <h4>Canva</h4>
           <p>Branded and modern visuals in short time for posts, emails and proposals.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://cdn-icons-png.flaticon.com/512/281/281764.png" alt="Web Design">
+        <img src="https://cdn-icons-png.flaticon.com/512/281/281764.png" alt="Web Design" />
         <div class="info">
           <h4>Web Design</h4>
           <p>Corpative front-end layouts and UX, theme consistency and branded messaging across pages.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/globe.svg" alt="English">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/globe.svg" alt="English" />
         <div class="info">
           <h4>English C1</h4>
           <p>Fluent communication in professional environments, both written and spoken.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/monitor.svg" alt="PowerPoint">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/monitor.svg" alt="PowerPoint" />
         <div class="info">
           <h4>PowerPoint</h4>
           <p>Clean and structured corporate slides and visual storytelling formats.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/file-text.svg" alt="Word">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/file-text.svg" alt="Word" />
         <div class="info">
           <h4>Microsoft Word</h4>
           <p>Advanced control over formatting, layout, and professional writing standards.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/edit.svg" alt="Writing">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/edit.svg" alt="Writing" />
         <div class="info">
           <h4>Writing</h4>
           <p>Clear structure and language for internal documents and public communication.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/search.svg" alt="Critical Thinking">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/search.svg" alt="Critical Thinking" />
         <div class="info">
           <h4>Critical Thinking</h4>
           <p>Evaluation of processes and outcomes with the goal of continuous improvement.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/book-open.svg" alt="Continuous Improvement">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/book-open.svg" alt="Continuous Improvement" />
         <div class="info">
           <h4>Continuous Improvement</h4>
           <p>Consistently seeking new ways to save time, energy, and elevate results.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/shuffle.svg" alt="Open Mindset">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/shuffle.svg" alt="Open Mindset" />
         <div class="info">
           <h4>Open Mindset</h4>
           <p>Quick to adapt and explore different approaches when improvement is possible.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/message-circle.svg" alt="Communication">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/message-circle.svg" alt="Communication" />
         <div class="info">
           <h4>Clear Communication</h4>
           <p>Written and verbal messages that are structured, polished, and direct.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/clock.svg" alt="Time Management">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/clock.svg" alt="Time Management" />
         <div class="info">
           <h4>Time Management</h4>
           <p>Reliable execution of workflows, prioritization and progress tracking.</p>
         </div>
       </div>
       <div class="skill">
-        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/settings.svg" alt="Problem Solving">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/2366e387452800f4d593229ee72998133d787635/assets/visuals/settings.svg" alt="Problem Solving" />
         <div class="info">
           <h4>Problem Solving</h4>
           <p>Calm and creative reaction to unexpected blockers or last-minute changes.</p>
@@ -230,11 +243,15 @@
     <div class="buttons">
       <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html">The Visuals I Build</a>
       <a href="https://irvyandl.github.io/VirtualAssistance/contact.html">Add these skills to your team now!</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/FAQ.html">Frequently Asked Questions</a>
     </div>
   </section>
 
   <footer>
     © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
+    <div class="footer-call">
+      <a href="https://irvyandl.github.io/PageDesignWithIrvin/">Do you want a website like this? Click here</a>
+    </div>
   </footer>
 </body>
 </html>
