--- a/FAQ.html
+++ b/FAQ.html
@@ -79,6 +79,18 @@
       font-size: 0.85rem;
       color: #777;
     }
+    .footer-call {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+    .footer-call a {
+      color: #2F528F;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .footer-call a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -128,6 +140,9 @@
 
   <footer>
     © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
+    <div class="footer-call">
+      <a href="https://irvyandl.github.io/PageDesignWithIrvin/">Do you want a website like this? Click here</a>
+    </div>
   </footer>
 </body>
 </html>
