--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Irvin Prado</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -95,6 +96,41 @@
       font-size: 0.85rem;
       color: #777;
     }
+
+    .footer-call {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+
+    .footer-call a {
+      color: var(--color-accent);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .footer-call a:hover {
+      text-decoration: underline;
+    }
+
+    /* Mobile adaptation */
+    @media (max-width: 600px) {
+      body {
+        padding: 2rem 1rem;
+      }
+
+      .container {
+        padding: 1.5rem;
+        margin: 1rem;
+      }
+
+      h2 {
+        font-size: 1.6rem;
+      }
+
+      input, select, textarea, button {
+        font-size: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -157,6 +193,9 @@
 
   <footer>
     © 2025 Irvin Prado. <em>Ascende Superius – Seek Higher Things</em>
+    <div class="footer-call">
+      <a href="https://irvyandl.github.io/PageDesignWithIrvin/">Do you want a website like this? Click here</a>
+    </div>
   </footer>
 </body>
 </html>
