--- a/FAQ.html
+++ b/FAQ.html
@@ -99,40 +99,43 @@
     <h2>Frequently Asked Questions</h2>
 
     <h3>What services do you offer as a Virtual Assistant?</h3>
-    <p>I provide structured virtual assistance and data services, including inbox/calendar management, CRM updates, reporting, dashboards (Excel/Power BI), and branded slide design (PowerPoint/Canva).</p>
+    <p>I provide structured virtual assistance and data services, including inbox/calendar management, CRM updates, reporting, dashboards (Excel/Power BI), and branded slide design (PowerPoint/Canva). Task management is supported through Google Keep for transparent, easy-to-follow collaboration.</p>
 
     <h3>How do your pricing and collaboration work?</h3>
-    <p>Everything is based on the client’s specific needs. Once you complete the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a> form, I review your goals, workload, and priorities. Then, I build a custom monthly plan — including hours, deliverables, and price — that fits your workflow and budget. No generic packages. Every collaboration is unique and designed around you.</p>
+    <p>Everything is based on the client’s specific needs. Once you complete the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a> form, I review your goals, workload, and priorities. Then, I build a custom monthly plan — including hours, deliverables, and price — that fits your workflow and budget. No generic packages. Every collaboration is unique and designed around you. The scope and SOP are created collaboratively based on what works best for your tools and routines.</p>
 
     <h3>How do I know you're reliable and organized?</h3>
-    <p>Each client has a structured plan with clear hours and deliverables. I track tasks with Google Calendar and Excel, and provide consistent updates to ensure transparency, timeliness, and alignment with your goals.</p>
+    <p>I use structured task tracking through Google Keep with color-coded priorities and labels, along with formal SOP workflows. You’ll always be able to check what's pending, submitted, and completed in real-time, supported by regular check-ins and weekly summaries.</p>
 
     <h3>Do you handle confidential data securely?</h3>
     <p>Yes. I use encrypted cloud services (Google Drive, OneDrive), and strong password policies. NDAs are welcome, and I treat sensitive business data with the confidentiality it deserves.</p>
 
     <h3>How do payments work?</h3>
-    <p>I use <strong>HelloBonsai.com</strong> to ensure mutual protection. Once we agree on the terms, you'll receive a private Hellobonsai invoice link. Funds are released only when you're satisfied with the results.</p>
+    <p>I use <strong>HelloBonsai.com</strong> to ensure mutual protection. Once we agree on the terms, you'll receive a private invoice link. Payments are due before each cycle starts. A 10% daily late fee applies, and after 3 days, all services will be suspended until the payment is cleared. Day 1 includes a written reminder.</p>
 
     <h3>What happens if I miss a payment?</h3>
-    <p>If payment is not made on time, a 10% late fee applies per day starting from the due date. If payment is not received by Day 3, work will be suspended and all deliverables withheld until full payment is completed, including penalties. On Day 1 of delay, you will receive a written reminder.</p>
+    <p>You will receive a payment reminder on Day 1. A 10% daily late fee begins immediately. If payment is still not received by Day 3, tasks and deliveries are paused. All work resumes once the full balance (including any penalties) is cleared.</p>
 
     <h3>What if I want to request a one-time project?</h3>
-    <p>Clients can request custom projects at any time as long as they fall within their selected plan. A 50% deposit is required in advance, and the remaining 50% is paid upon delivery. These requests must be submitted at least 48 hours before they’re needed.</p>
+    <p>You can request additional one-time projects related to your current plan at any time. These must be submitted at least 48 hours in advance and require 50% payment upfront. The remaining 50% is due on delivery.</p>
 
     <h3>Do I need to renew my contract monthly?</h3>
-    <p>No. The contract remains valid as long as monthly payments are active. If either party needs to revise or update the agreement, it can be reviewed and adjusted accordingly at any time.</p>
+    <p>No renewal is required unless changes are needed. The agreement remains valid as long as monthly payments are made. Either party can request revisions at any time if circumstances evolve.</p>
 
     <h3>How do you confirm the scope of my tasks?</h3>
-    <p>All task and project instructions must be submitted in writing (email, Slack, WhatsApp). I’ll respond with a scope recap. If I don’t receive clarification or corrections within 30 minutes, I’ll proceed as outlined in the recap. Confirmation replies are encouraged but not mandatory.</p>
+    <p>All instructions must be submitted in writing (email, Slack, WhatsApp). I’ll send a recap to confirm the scope. If no response is received within 30 minutes, the task will proceed based on that recap as confirmation. This ensures clarity for both sides.</p>
+
+    <h3>How is feedback managed?</h3>
+    <p>You can leave feedback using a Google Keep note labeled “Feedback” following a simple format (reference, comment, and date). You can prioritize it visually with colors — red/peach for urgent, yellow for non-urgent — and notify me when it’s submitted.</p>
 
     <h3>Will we sign a contract?</h3>
-    <p>Yes. I provide a clear service agreement tailored to your project. It outlines the scope, deadlines, fees, and terms like emergency policies or revisions — so both sides stay aligned and confident throughout.</p>
+    <p>Yes. You will receive a personalized agreement based on the selected plan. It outlines hours, deliverables, deadlines, payment, task policy, emergency clauses, and more.</p>
 
     <h3>What if there's an emergency or unexpected situation?</h3>
-    <p>If I face medical leave or a local emergency (weather, internet, etc.), you'll be notified with at least 48 hours' notice (or 12 for urgent issues), backed by official reports if needed. I plan ahead to avoid delays whenever possible.</p>
+    <p>If I face medical leave or a local emergency (weather, internet, etc.), you'll receive notice at least 48 hours in advance, or 12 hours for urgent events. Work pauses only in unavoidable scenarios and resumes as soon as possible.</p>
 
     <h3>How do we get started?</h3>
-    <p>Fill out my short onboarding form on the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a>. Once I review your needs, I'll suggest the best plan and send over your agreement + HelloBonsai link. Work starts immediately after confirmation.</p>
+    <p>Simply fill out my short onboarding form on the <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" target="_blank">contact page</a>. I’ll use it to tailor your plan and initiate the contract and invoice. Once confirmed, work begins.</p>
 
     <div class="home-button">
       <a href="https://irvyandl.github.io/VirtualAssistance/">← Back to Home</a>
