--- a/contract.html
+++ b/contract.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Service Agreement | Irvin Prado</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -103,50 +103,50 @@
       <li>Task 2: [Insert Task]</li>
       <li>Task 3: [Insert Task]</li>
     </ul>
-    <p>Services will be delivered remotely through digital tools. Provider obligations are determined by the specific service plan selected and paid for. Availability for on-demand project execution is included based on the scope of the plan.</p>
+    <p>Services will be delivered remotely using digital tools. Provider responsibilities are defined by the selected plan. Task and project tracking, priority, and execution will be organized using Google Keep Notes with labels and color codes as agreed upon during onboarding.</p>
 
     <h2>2. Ownership of Work</h2>
-    <p>All materials created during the course of the service, including documents, presentations, and dashboards, are the intellectual property of the client upon full payment.</p>
+    <p>All work materials, including documents, visuals, and data outputs, are transferred to the client once full payment is received for the associated billing cycle.</p>
 
     <h2>3. Payment Policy</h2>
     <ul>
-      <li>Clients must complete payment via Escrow.com within 2 calendar days of receiving the invoice following the trial phase. Failure to do so will result in cancellation of the service. *This clause only applies to the first invoice issued; subsequent invoices are not subject to this trial window.*</li>
-      <li>The collaboration and the monthly cycle officially begin on the date the invoice is issued by the provider, not the agreement signature date.</li>
-      <li>If payment is late, a notice will be sent by message on Day 1 of delay. From Day 3, a 10% late fee will apply per day. Work, task delivery, and project access will be suspended until payment is completed with all applicable charges.</li>
+      <li>Payment must be made via HelloBonsai within 2 calendar days of the first invoice after trial phase. Non-payment will result in service cancellation.</li>
+      <li>The collaboration starts on the invoice date (not the agreement signature date).</li>
+      <li>If payment is late: Day 1 = written notice, Day 3 = 10% daily late fee begins, and work is suspended until all dues are cleared.</li>
     </ul>
 
     <h2>4. Fee Adjustments</h2>
-    <p>Service rates may be updated by the provider in response to inflation or improvements in service quality, tools, or value added. Any rate change will be notified at least 10 days before the new billing cycle begins.</p>
+    <p>Service pricing may be updated to reflect inflation, improvements, or upgraded tools/services. Notice of change will be provided at least 10 days prior to renewal.</p>
 
     <h2>5. One-Time Projects Policies</h2>
-    <p>One-time projects must be requested atleast 48 hours before the desired delivery date. A 50% advance is required upon approval, and the remaining 50% is payable upon delivery. Only deliverables within the paid plan ([Insert Plan Name]) will be considered. External requests require a separate agreement.</p>
+    <p>Projects must be requested at least 48 hours in advance and require 50% upfront and 50% upon delivery. Projects must align with the paid plan ([Insert Plan Name]).</p>
 
     <h2>6. Terms of Termination</h2>
-    <p>Either party may end this agreement with 10 days prior written notice. Notice must be provided by Day 20 of a monthly cycle to avoid extended billing obligations. Once a service is canceled, the agreement is no longer in force.</p>
+    <p>Either party can terminate with 10 days’ written notice. Cancellation before Day 20 of the billing cycle avoids further charges. Agreement ends once service is terminated.</p>
 
-    <h2>7. Communication Policy</h2>
-    <p>Task and project requests must be submitted in writing (email, Slack, WhatsApp). The provider will reply with a scope recap and request a "reply to confirm." If no reply is received within 30 minutes, the task will be executed based on the information shared in the recap message.</p>
+    <h2>7. Communication & Task Confirmation</h2>
+    <p>All task instructions must be submitted in writing. The provider sends a scope recap with a "reply to confirm" request. If no reply is received in 30 minutes, the task proceeds per the recap. Communication and recordkeeping are managed using Google Keep.</p>
 
-    <h2>8. Project Requests</h2>
-    <p>Project work and additional deliverables are selected by the client based on the features available in their chosen plan ([Insert Plan Name]).</p>
+    <h2>8. Task Tracking & SOP</h2>
+    <p>Tasks are delegated and tracked in Google Keep using labeled notes. Delegation includes task description, target completion, priority color, and delegation timestamp. Weekly resets archive completed items. Feedback can be submitted anytime via a labeled note, and response is expected upon notification.</p>
 
     <h2>9. Force Majeure</h2>
-    <p>In the case of natural disasters or political unrest in the provider’s location, work may be paused with at least 12 hours' notice and proof (e.g., weather alert or official report).</p>
+    <p>Delays caused by external factors (disasters, political events, etc.) are valid with 12-hour notice and evidence.</p>
 
     <h2>10. Health & Emergency Leave</h2>
-    <p>If a personal health issue arises, the provider will give a 48-hour notice and outline the expected downtime, including an estimated number of hours or days affected whenever possible.</p>
+    <p>In case of illness or personal emergency, the provider will notify the client with a 48-hour estimate of downtime and recovery expectations.</p>
 
     <h2>11. Confidentiality</h2>
-    <p>Client information will remain confidential throughout and after the agreement. NDAs may be signed upon request.</p>
+    <p>All client data is treated confidentially and will not be disclosed. NDAs are welcomed when applicable.</p>
 
     <h2>12. Legal Jurisdiction</h2>
-    <p>To be defined mutually by both parties before the agreement is finalized.</p>
+    <p>Jurisdiction will be mutually agreed upon prior to contract finalization.</p>
 
     <h2>13. Limitation of Liability</h2>
-    <p>The provider shall not be held liable for any damage, delays, or disruptions caused by third-party tools, platforms, collaborators, or persons. The provider is only responsible for performance directly related to their own tasks as agreed in the scope of services. Errors resulting from misinformation or incomplete instructions will not be subject to refunds or extra hours. Redelivery for one-time projects must be paid anew. No hour bonuses or refunds apply to general service cycles when such errors occur.</p>
+    <p>The provider is not liable for third-party errors or damages. Responsibility is limited to the provider’s direct deliverables. Mistakes from inaccurate client information do not qualify for refunds or compensatory hours.</p>
 
     <h2>14. Agreement Review & Renewal</h2>
-    <p>This agreement may be reviewed and adjusted at any time upon request by either party. Unless changes are requested, no formal renewal is required. The agreement remains valid and in force as long as active payments are being made.</p>
+    <p>The agreement may be revised if requested by either party. No formal renewal is needed unless revisions are made. This contract remains valid while payments continue on time.</p>
 
     <h2>15. Approval</h2>
     <div class="signature">
