--- a/index.html
+++ b/index.html
@@ -160,5 +160,20 @@
       <a href="https://irvyandl.github.io/PageDesignWithIrvin/">Do you want a website like this? Click here</a>
     </div>
   </footer>
+
+  <!-- Default Statcounter code for LinkedIn link -->
+  <script type="text/javascript">
+    var sc_project=13151169; 
+    var sc_invisible=1; 
+    var sc_security="dd7a3cb1"; 
+  </script>
+  <script type="text/javascript"
+  src="https://www.statcounter.com/counter/counter.js" async></script>
+  <noscript><div class="statcounter"><a title="Web Analytics"
+  href="https://statcounter.com/" target="_blank"><img class="statcounter"
+  src="https://c.statcounter.com/13151169/0/dd7a3cb1/1/" alt="Web Analytics"
+  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+  <!-- End of Statcounter Code -->
+
 </body>
 </html>
