--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <title>Irvin Prado | Virtual Assistance + BI</title>
   <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T73GJG4FZ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-T73GJG4FZ6');
+  </script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
