--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
     </form>
 
     <div class="alt-contact">
-      <p>Prefer to reach out directly? Email me at <a href="mailto:irvyandl18@gmail.com">irvyandl18@gmail.com</a> or find me on <a href="https://www.linkedin.com/in/irvin-prado-6961b1363" target="_blank">LinkedIn</a>.</p>
+      <p>Prefer to reach out directly? Email me at <a href="mailto:irvinforbusinesses@gmail.com">irvinforbusinesses@gmail.com</a> or find me on <a href="https://www.linkedin.com/in/irvin-prado-6961b1363" target="_blank">LinkedIn</a>.</p>
     </div>
   </div>
 
